Made month selector go left->right. Also fixed a few alignment issues

--- a/app/timetrackercallback/static/css/timereports.css
+++ b/app/timetrackercallback/static/css/timereports.css
@@ -184,10 +184,10 @@ a:hover {color:#0033FF; text-decoration:underline; }
    #month_selector_list .future_month:hover,
    #month_selector_list .future_month { color:#ccc;cursor:default;text-decoration:none;}
    #month_selector_wrapper{width:240px;}
-   #month_year_display{line-height: 24px;width:235px;}
-   #selection_display{display:inline-block;width: 162px;text-align:center;cursor:pointer;}
+   #month_year_display{line-height: 24px;width:238px; padding-left: 2px;}
+   #selection_display{display:inline-block;width: 168px;text-align:center;cursor:pointer;}
    #month_selector_list{
-       width: 235px;
+       width: 240px;
        padding:0;
        margin:0;
        border: 1px solid gray;
@@ -204,8 +204,7 @@ a:hover {color:#0033FF; text-decoration:underline; }
    }
    #month_selector_list li span{
        display:block;
-       width: 60px;
-       padding: 0px 8px;
+       width: 80px;
        cursor:pointer;
        text-align:center;
    }
@@ -214,11 +213,8 @@ a:hover {color:#0033FF; text-decoration:underline; }
        color:#345B9E;
    }
    #month_selector_list li span.selected{background-color: #345B9E;color:white;}
-   #month_selector_list li.column1 { margin-left: 0;}
-   #month_selector_list li.column2 { margin-left: 80px;}
-   #month_selector_list li.column3 { margin-left: 160px; width: 75px;}
+   #month_selector_list li{ float:left;}
    #month_selector_list li { line-height: 24px; }
-   #month_selector_list li.reset { margin-top: -100px; }
 
 #reports_time_range_selector{
     position:static;
